Jeg har ændret lidt i det...

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css-grid-layout.css">
 </head>
 <body>
+Hvad kalder man en haj, der kan trylle? 
 
+- Haj Potter 
+
+*hahahahahaha*
 
 <div class="container">
         
